UPDATES IssueDetail component; refactors comment filtering logic for improved readability, adds a fallback message for empty comments, and enhances CSS for better styling and organization.

--- a/src/styles/IssueDetail.module.css
+++ b/src/styles/IssueDetail.module.css
@@ -1,3 +1,13 @@
+hr {
+    border: 1px solid #dadadf;
+    margin: 1rem 0;
+    max-width: 85%;
+    margin: 0 1rem 1rem 1rem;
+    max-width: fit-content;
+}
+
+
+
 .project {
     background-color: #eaeadb;
     border: 1px solid #dadadf;
@@ -28,6 +38,7 @@
     text-align: left;
     margin-left: 1rem;
 }
+
 .colAlign {
     
     font-size: 1.1rem;
@@ -52,7 +63,6 @@
 }
 
 .backToIssueButton {
-    
     background-color: #7195b9;
     border: 1px solid #dadadf;
     border-radius: 2px;
@@ -71,9 +81,8 @@
 .commentsHeader {
     background-color: #ece6e6;
     border: 1px solid rgb(180, 175, 175);
-    
-    
 }
+
 
 .criticalPriority {
     border: 4px solid red;
@@ -85,6 +94,7 @@
    
   }
   
+
   .highPriority {
     border: 4px solid  rgb(255, 150, 13);
     color: rgb(255, 150, 13);
@@ -95,6 +105,7 @@
  
   }
   
+
   .mediumPriority {
     border: 5px solid  yellow;
     color:rgb(126, 128, 49);
@@ -105,23 +116,22 @@
     
   }
   
+
   .lowPriority {
     border: 4px solid rgb(68, 128, 0);
-
     color: rgb(68, 128, 0);
     border-radius: 5%;
     padding: .2rem .4rem .4rem .4rem;
     border-radius: 10%;
     max-width: fit-content;
-   
   }
+
+
 .rowAlign {
     margin-top: 1.3rem;
 }
-hr {
-    border: 1px solid #dadadf;
-    margin: 1rem 0;
-    max-width: 85%;
-    margin: 0 1rem 1rem 1rem;
-    max-width: fit-content;
+.commentBox{
+    border-bottom: solid 1px rgb(146, 143, 143);
+    padding-top: .4rem;
+    font-size: 1.2rem;
 }
